Completed implementing preconditions execution